<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopepsi"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="260dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pepsi_logo_nuevo" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="307dp"
        android:layout_height="548dp"
        android:src="@drawable/cuadrado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.912" />

    <EditText
        android:id="@+id/idUsuario"
        android:layout_width="277dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="4"
        android:hint="@string/Usuario"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <EditText
        android:id="@+id/idContraseña"
        android:layout_width="277dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/baseline_lock_open_24"
        android:drawablePadding="10dp"
        android:ems="4"
        android:hint="@string/Contraseña"
        android:inputType="text"
        android:password="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="183dp"
        android:layout_height="75dp"
        android:backgroundTint="#E32934"
        android:text="@string/iniciar_sesion"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />


</androidx.constraintlayout.widget.ConstraintLayout>